--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,187 +1,21 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <div class="row" style="background-color: #29AB87;">
-        <div class="col-sm-10">
-          <h1 class="p-1 mt-3" style="font-size: 45px;font-weight: 500;">STAR WARS </h1>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <!-- <li class="nav-item" *ngFor="let dot of array;let i=index">
+              <a class="nav-link" href="" (change)="navigationData()">{{dot}}</a>
+            </li> -->
+            <li class="nav-item">
+              <a routerLink="home" class="nav-link">home</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="dashboard" class="nav-link">Dashboard</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-sm-2">
-          <p class="mt-5">THE SWAPI PROJECT </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-12 bg-light">
-      <div class="row mt-4">
-        <div class="col-md-2 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <h3>Filters</h3>
-            </div>
-            <div class="col-md-10 offset-md-1">
-              <select name="movie" class="form-control col-form-label-sm" [(ngModel)]="selectedMovie" id="">
-                <option value="">Movie Name</option>
-                <option [value]="data.title" *ngFor="let data of moviesList">{{data.title}} </option>
-              </select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <select name="movie" class="form-control col-form-label-sm" id="">
-                <option value="">Species</option>
-                <option [value]="data.name" *ngFor="let data of speciesList">{{data.name}} </option>
-              </select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <select name="movie" class="form-control col-form-label-sm" id="">
-                <option value="">Vehicle</option>
-                <option [value]="data.name" *ngFor="let data of vehiclesList">{{data.name}} </option>
-              </select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <select name="movie" class="form-control col-form-label-sm" id="">
-                <option value="">Star Ships</option>
-                <option [value]="data.name" *ngFor="let data of shipList">{{data.name}} </option>
-              </select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <ng-multiselect-dropdown [placeholder]="'Select Year'" [settings]="dropdownSettings" [data]="yearsData"
-                [(ngModel)]="selectedItems" (onSelect)="onItemSelect($event)">
-              </ng-multiselect-dropdown>
-
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <button class="btn btn-info" (click)="searchData()">SEARCH</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th>S No</th>
-                    <th>Character</th>
-                    <th>Species</th>
-                    <th>Birth Year</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let data of tableData;let i=index">
-                    <td>{{i+1}} </td>
-                    <td> <span (click)="navigationToCharater(data)" style="cursor: pointer;">{{data.name}}</span> </td>
-                    <td><span *ngIf="data.species">{{data.species}}</span> </td>
-                    <td>{{data.birth_year}} </td>
-                  </tr>
-                </tbody>
-              </table>
-              <mat-paginator [pageSizeOptions]="[2,4,6,8,10]" [pageSize]="10" #okrRef>
-              </mat-paginator>
-            </div>
-          </div>
-        </div>
-      </div>
+      </nav>
     </div>
   </div>
-  <div class="row mt-4" *ngIf="isShow">
-    <div class="col-md-12">
-      <div class="row" style="background-color: #29AB87;">
-        <div class="col-sm-10">
-          <h1 class="p-1 mt-3" style="font-size: 45px;font-weight: 500;">STAR WARS </h1>
-        </div>
-        <div class="col-sm-2">
-          <p class="mt-5">THE SWAPI PROJECT </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-12 bg-light">
-      <div class="row mt-2">
-        <div class="col-md-12">
-          <div style="float: right;">
-            <button class="btn btn-info" (click)="close()">close</button>
-          </div>
-        </div>
-      </div>
-      <div class="row mt-1">
-        <div class="col-md-2 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <img src="assets\globe.webp" class="rounded-circle" width="50" height="70" alt="">
-            </div>
-            <div class="col-md-12">
-              Name:{{bindData.name}}
-            </div>
-            <div class="col-md-12">
-              Year:{{bindData.birth_year}}
-            </div>
-            <div class="col-md-12">
-              Height:{{bindData.height}}
-            </div>
-            <div class="col-md-12">
-              Weight:{{bindData.mass}}
-            </div>
-            <div class="col-md-12">
-              Created at:{{bindData.created}}
-            </div>
-            <div class="col-md-12">
-              Edited at:{{bindData.edited}}
-            </div>
-            <div class="col-md-12">
-              Hair color:{{bindData.hair_color}}
-            </div>
-            <div class="col-md-12">
-              Eye color:{{bindData.eye_color}}
-            </div>
-            <div class="col-md-12">
-              Skin color:{{bindData.skin_color}}
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">FILMS</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.films">
-                <div class="col-sm-12 " *ngFor="let data of bindData.films">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-              <span class="ml-5">
-
-              </span>
-            </div>
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">VEHICLES</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.vehicles">
-                <div class="col-sm-12 " *ngFor="let data of bindData.vehicles">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-              <span class="ml-5">
-
-              </span>
-            </div>
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">STARSHPS</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.starships">
-                <div class="col-sm-12 " *ngFor="let data of bindData.starships">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  <router-outlet></router-outlet>
