changes for new setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <!-- <li class="nav-item" *ngFor="let dot of array;let i=index">
-              <a class="nav-link" href="" (change)="navigationData()">{{dot}}</a>
-            </li> -->
-            <li class="nav-item">
-              <a routerLink="home" class="nav-link">home</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="dashboard" class="nav-link">Dashboard</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </div>
-  <router-outlet></router-outlet>
+<H1>Hello</H1>
