--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,194 +1,17 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="row" style="background-color: #29AB87;">
-        <div class="col-sm-10">
-          <h1 class="p-1 mt-3" style="font-size: 45px;font-weight: 500;">STAR WARS </h1>
-        </div>
-        <div class="col-sm-2">
-          <p class="mt-5">THE SWAPI PROJECT </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-12 bg-light">
-      <div class="row mt-4">
-        <div class="col-md-2 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <h3>Filters</h3>
-            </div>
-            <div class="col-md-10 offset-md-1">
-              <ng-select [items]="moviesList" bindLabel="name" placeholder="Movie Name"
-                (change)="onItemSelect($event,'Movie')" [(ngModel)]="selectedMovie">
-              </ng-select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <ng-select [items]="speciesList" bindLabel="name" placeholder="Species"
-                (change)="onItemSelect($event,'Specie')" [(ngModel)]="selectedSpice">
-              </ng-select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <ng-select [items]="vehiclesList" bindLabel="name" placeholder="Vehicle"
-                (change)="onItemSelect($event,'Vehicle')" [(ngModel)]="selectedVehicle">
-              </ng-select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <ng-select [items]="shipList" bindLabel="name" placeholder="Star Ships"
-                (change)="onItemSelect($event,'Ship')" [(ngModel)]="selectedShip">
-              </ng-select>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <ng-multiselect-dropdown [placeholder]="'Select Year'" [settings]="dropdownSettings" [data]="yearsData"
-                [(ngModel)]="selectedItems" style="color: #29AB87 !important;
-    font-weight: 500 !important;" class="custom" (onSelect)="onItemSelect($event,'year')">
-              </ng-multiselect-dropdown>
-            </div>
-            <div class="col-md-10 offset-md-1 mt-3">
-              <button class="btn btn-info m-1" (click)="searchData()">SEARCH</button>
-              <button class="btn btn-info" (click)="clearData()">Clear</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-            
-              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-                <ng-container matColumnDef="sNo">
-                  <th mat-header-cell *matHeaderCellDef id="tableAln">S.No</th>
-                  <td mat-cell *matCellDef="let element; let i = index">
-                    {{ i +1}}
-                  </td>
-                </ng-container>
-                <ng-container matColumnDef="character">
-                  <th mat-header-cell *matHeaderCellDef id="tableAln">Character Name</th>
-                  <td mat-cell *matCellDef="let element">
-                    <span (click)="navigationToCharater(element)" style="cursor: pointer;">{{element.name}}</span>
-                  </td>
-                </ng-container>
-                <ng-container matColumnDef="spice">
-                  <th mat-header-cell *matHeaderCellDef id="tableAln">Spice</th>
-                  <td mat-cell *matCellDef="let element">
-                    <span *ngIf="element.species">{{element.species}}</span>
-                  </td>
-                </ng-container>
-                <ng-container matColumnDef="year">
-                  <th mat-header-cell *matHeaderCellDef id="tableAln">Year</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{element.birth_year}} </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns" class="bg-primary"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator [pageSizeOptions]="[5,10,15,20,25,30,35,40,45,50]" [pageSize]="5" #paginator>
-              </mat-paginator>
-            </div>
-          </div>
-        </div>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav" *ngFor="let data of List">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLinkActive="active" class="nav-link"
+          [routerLink]="data.link">{{data.name}} </a>
+        </li>
+      </ul>
     </div>
   </div>
-  <div class="row mt-4" *ngIf="isShow">
-    <div class="col-md-12">
-      <div class="row" style="background-color: #29AB87;">
-        <div class="col-sm-10">
-          <h1 class="p-1 mt-3" style="font-size: 45px;font-weight: 500;">STAR WARS </h1>
-        </div>
-        <div class="col-sm-2">
-          <p class="mt-5">THE SWAPI PROJECT </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-12 bg-light">
-      <div class="row mt-2">
-        <div class="col-md-12">
-          <div style="float: right;">
-            <button class="btn btn-info" (click)="close()">close</button>
-          </div>
-        </div>
-      </div>
-      <div class="row mt-1">
-        <div class="col-md-2 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <img src="assets\globe.webp" class="rounded-circle" width="50" height="70" alt="">
-            </div>
-            <div class="col-md-12">
-              Name:{{bindData.name}}
-            </div>
-            <div class="col-md-12">
-              Year:{{bindData.birth_year}}
-            </div>
-            <div class="col-md-12">
-              Height:{{bindData.height}}
-            </div>
-            <div class="col-md-12">
-              Weight:{{bindData.mass}}
-            </div>
-            <div class="col-md-12">
-              Created at:{{bindData.created}}
-            </div>
-            <div class="col-md-12">
-              Edited at:{{bindData.edited}}
-            </div>
-            <div class="col-md-12">
-              Hair color:{{bindData.hair_color}}
-            </div>
-            <div class="col-md-12">
-              Eye color:{{bindData.eye_color}}
-            </div>
-            <div class="col-md-12">
-              Skin color:{{bindData.skin_color}}
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8 boxesBG">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">FILMS</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.films">
-                <div class="col-sm-12 " *ngFor="let data of bindData.films">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-              <span class="ml-5">
+</nav>
 
-              </span>
-            </div>
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">VEHICLES</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.vehicles">
-                <div class="col-sm-12 " *ngFor="let data of bindData.vehicles">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-              <span class="ml-5">
-
-              </span>
-            </div>
-            <div class="col-md-12">
-              <h3 class="ml-5" style="float: inline-start; font-weight: 600;color: #29AB87;">STARSHPS</h3>
-            </div>
-            <div class="col-md-12 ">
-              <div class="row textarea" *ngIf="bindData.starships">
-                <div class="col-sm-12 " *ngFor="let data of bindData.starships">
-                  <label for="">
-                    {{data}}
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- <b custom-directive></b>
+  This is the tutorial for custom directive
+</b> -->
+<router-outlet></router-outlet>
